welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: illegal start of simple expression
  } else if ((10+a)<10)) {
                       ^